cmu-project/elb.tf
# resource "aws_lb" "test" {
#   name               = var.lb-name
#   internal           = false
#   load_balancer_type = "application"
#   security_groups    = [aws_security_group.sg.id]
#   subnets            = [aws_subnet.pub-sub-1.id, aws_subnet.pub-sub-2.id]

#   tags = {
#     Environment = "production"
#   }
# }

# resource "aws_lb_listener" "front_end" {
#   load_balancer_arn = aws_lb.test.arn
#   port              = "80"
#   protocol          = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.target-group.arn
#   }
# }
